packages/wasmit/lib/src/bridge_generated.io.dart


class wire_PreopenedDir extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> wasm_guest_path;

  external ffi.Pointer<wire_uint_8_list> host_path;
}

class wire_list_preopened_dir extends ffi.Struct {
  external ffi.Pointer<wire_PreopenedDir> ptr;

  @ffi.Int32()
  external int len;
}

class wire_WasiConfigNative extends ffi.Struct {
  @ffi.Bool()
  external bool capture_stdout;

  @ffi.Bool()
  external bool capture_stderr;

  @ffi.Bool()
  external bool inherit_stdin;

  @ffi.Bool()
  external bool inherit_env;

  @ffi.Bool()
  external bool inherit_args;

  external ffi.Pointer<wire_StringList> args;

  external ffi.Pointer<wire_list_env_variable> env;

  external ffi.Pointer<wire_StringList> preopened_files;

  external ffi.Pointer<wire_list_preopened_dir> preopened_dirs;
}

class wire_WasiStackLimits extends ffi.Struct {
  @ffi.UintPtr()
  external int initial_value_stack_height;

  @ffi.UintPtr()
  external int maximum_value_stack_height;

  @ffi.UintPtr()
  external int maximum_recursion_depth;
}

class wire_ModuleConfigWasmi extends ffi.Struct {
  external ffi.Pointer<wire_WasiStackLimits> stack_limits;

  external ffi.Pointer<ffi.UintPtr> cached_stacks;

  external ffi.Pointer<ffi.Bool> mutable_global;

  external ffi.Pointer<ffi.Bool> sign_extension;

  external ffi.Pointer<ffi.Bool> saturating_float_to_int;

  external ffi.Pointer<ffi.Bool> tail_call;

  external ffi.Pointer<ffi.Bool> extended_const;

  external ffi.Pointer<ffi.Bool> floats;
}

class wire_ModuleConfigWasmtime extends ffi.Struct {
  external ffi.Pointer<ffi.Bool> debug_info;

  external ffi.Pointer<ffi.Bool> wasm_backtrace;

  external ffi.Pointer<ffi.Bool> native_unwind_info;

  external ffi.Pointer<ffi.UintPtr> max_wasm_stack;

  external ffi.Pointer<ffi.Bool> wasm_threads;

  external ffi.Pointer<ffi.Bool> wasm_simd;

  external ffi.Pointer<ffi.Bool> wasm_relaxed_simd;

  external ffi.Pointer<ffi.Bool> relaxed_simd_deterministic;

  external ffi.Pointer<ffi.Bool> wasm_multi_memory;

  external ffi.Pointer<ffi.Bool> wasm_memory64;

  external ffi.Pointer<ffi.Uint64> static_memory_maximum_size;

  external ffi.Pointer<ffi.Bool> static_memory_forced;

  external ffi.Pointer<ffi.Uint64> static_memory_guard_size;

  external ffi.Pointer<ffi.Bool> parallel_compilation;

  external ffi.Pointer<ffi.Bool> generate_address_map;
}

class wire_ModuleConfig extends ffi.Struct {
  external ffi.Pointer<ffi.Bool> multi_value;

  external ffi.Pointer<ffi.Bool> bulk_memory;

  external ffi.Pointer<ffi.Bool> reference_types;

  external ffi.Pointer<ffi.Bool> consume_fuel;

  external ffi.Pointer<wire_ModuleConfigWasmi> wasmi;

  external ffi.Pointer<wire_ModuleConfigWasmtime> wasmtime;
}

class wire_WasmitInstanceId extends ffi.Struct {
  @ffi.Uint32()
  external int field0;
}

class wire_WasmitModuleId extends ffi.Struct {
  @ffi.Uint32()
  external int field0;
}

class wire_WFunc extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

class wire_ExternalValue_Func extends ffi.Struct {
  external wire_WFunc field0;
}

class wire_Global extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

class wire_ExternalValue_Global extends ffi.Struct {
  external wire_Global field0;
}

class wire_Table extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

class wire_ExternalValue_Table extends ffi.Struct {
  external wire_Table field0;
}

class wire_Memory extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

class wire_ExternalValue_Memory extends ffi.Struct {
  external wire_Memory field0;
}

class ExternalValueKind extends ffi.Union {
  external ffi.Pointer<wire_ExternalValue_Func> Func;

  external ffi.Pointer<wire_ExternalValue_Global> Global;

  external ffi.Pointer<wire_ExternalValue_Table> Table;

  external ffi.Pointer<wire_ExternalValue_Memory> Memory;
}

class wire_ExternalValue extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external ffi.Pointer<ExternalValueKind> kind;
}

class wire_ModuleImport extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> module;

  external ffi.Pointer<wire_uint_8_list> name;

  external wire_ExternalValue value;
}

class wire_list_module_import extends ffi.Struct {
  external ffi.Pointer<wire_ModuleImport> ptr;

  @ffi.Int32()
  external int len;
}

class wire_WasmVal_i32 extends ffi.Struct {
  @ffi.Int32()
  external int field0;
}

class wire_WasmVal_i64 extends ffi.Struct {
  @ffi.Int64()
  external int field0;
}

class wire_WasmVal_f32 extends ffi.Struct {
  @ffi.Float()
  external double field0;
}

class wire_WasmVal_f64 extends ffi.Struct {
  @ffi.Double()
  external double field0;
}

class wire_WasmVal_v128 extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field0;
}

class wire_WasmVal_funcRef extends ffi.Struct {
  external ffi.Pointer<wire_WFunc> field0;
}

class wire_WasmVal_externRef extends ffi.Struct {
  external ffi.Pointer<ffi.Uint32> field0;
}

class WasmValKind extends ffi.Union {
  external ffi.Pointer<wire_WasmVal_i32> i32;

  external ffi.Pointer<wire_WasmVal_i64> i64;

  external ffi.Pointer<wire_WasmVal_f32> f32;

  external ffi.Pointer<wire_WasmVal_f64> f64;

  external ffi.Pointer<wire_WasmVal_v128> v128;

  external ffi.Pointer<wire_WasmVal_funcRef> funcRef;

  external ffi.Pointer<wire_WasmVal_externRef> externRef;
}

class wire_WasmVal extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external ffi.Pointer<WasmValKind> kind;
}

class wire_list_wasm_val extends ffi.Struct {
  external ffi.Pointer<wire_WasmVal> ptr;

  @ffi.Int32()
  external int len;
}

class wire_list_value_ty extends ffi.Struct {
  external ffi.Pointer<ffi.Int32> ptr;

  @ffi.Int32()
  external int len;
}

class wire_MemoryTy extends ffi.Struct {
  @ffi.Bool()
  external bool shared;

  @ffi.Uint32()
  external int minimum_pages;

  external ffi.Pointer<ffi.Uint32> maximum_pages;
}

class wire_TableArgs extends ffi.Struct {
  @ffi.Uint32()
  external int min;

  external ffi.Pointer<ffi.Uint32> max;
}

class wire_RwLockSharedMemory extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

class wire_WasmitSharedMemory extends ffi.Struct {
  external wire_RwLockSharedMemory field0;
}

class wire_Atomics extends ffi.Struct {
  @ffi.UintPtr()
  external int field0;
}

typedef DartPostCObjectFnType = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Bool Function(DartPort port_id, ffi.Pointer<ffi.Void> message)>>;
typedef DartPort = ffi.Int64;
